update font family

--- a/index.html
+++ b/index.html
@@ -135,7 +135,11 @@
           fontFamily: {
             sans: ['Alexandria', 'sans-serif'],
             alexandria: ['Alexandria', 'sans-serif'],
+            amiri: ['Amiri', 'serif'],
+
+
           }
+
         }
       }
     }
