--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     }
 
     body {
-      /* font-family: 'Alexandria', sans-serif; */
-      font-family: "Amiri", serif;
+      font-family: 'Alexandria', sans-serif;
+      /* font-family: "Amiri", serif; */
       background-color: #F6F2FA;
       /* Updated to new App Background */
       color: #100F19;
